--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    padding-top: 56px; /* Navbar'ın kapladığı alanı telafi etmek için */
+    padding-top: 56px; 
 }
 
 header, nav {
@@ -10,9 +10,9 @@ header, nav {
 }
 
 .logo {
-    max-width: 100%; /* Logo'nun genişliği, içerdiği kutucuğun genişliğine uyacak şekilde ayarlandı */
-    height: auto; /* Oranları korumak için otomatik yükseklik ayarı */
-    margin-left: 10px; /* Sol kenara 10 piksel boşluk bırakma */
+    max-width: 100%; 
+    height: auto; 
+    margin-left: 10px; 
 }
 
 .nav-link {
@@ -220,3 +220,453 @@ background-color: #D4292F;
     background-color: rgb(140, 168, 198);
 }
    
+.frame41 {
+    color: var(--primary-black, #0B0B0B);
+    position: absolute;
+    font-family: Roboto Condensed;
+    font-size: 50px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    text-transform: uppercase;
+    left: 236px;
+    bottom: -965px;
+}
+.frame10 {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: var(gray);
+    color: var(--primary-black);
+    text-decoration: none;
+    border-radius: 5px;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    position: absolute;
+    transition: background-color 0.3s ease;
+left: 236px;
+    bottom: -1045px;
+    
+ 
+
+}
+.frame10:hover {
+    background-color: rgb(140, 168, 198);
+}
+.frame10::before {
+    content: "";
+    position: absolute;
+    top: -5px;
+    left: -5px;
+    right: -5px;
+    bottom: -5px;
+    border: 2px solid var(dark --primary-white);
+    border-radius: 7px;
+    z-index: -3;
+}
+.Rectangle760 {
+    position: absolute;
+    top: 1783px;
+    left: 702px;
+}
+.Rectangle761 {
+    position: absolute;
+    top: 1783px;
+    left: 1152px;
+}
+.Rectangle762 {
+    position: absolute;
+    top: 2262px;
+    left: 703px;
+}
+.Rectangle763 {
+    position: absolute;
+    top: 2262px;
+    left: 1152px;
+}
+.Rectangle764 {
+    position: absolute;
+    top: 2741px;
+    left: 703px;
+}
+.Rectangle765 {
+    position: absolute;
+    top: 2741px;
+    left: 1152px;
+}
+.Rectangle766 {
+    position: absolute;
+    top: 3240px;
+    left: 703px;
+}
+.Rectangle767 {
+    position: absolute;
+    top: 3240px;
+    left: 1152px;
+}
+.recbas1
+{
+    position: absolute;
+    top: 2096px;
+    left: 706px;
+}
+.recbas1>h1
+{
+    position: absolute;
+    color: var(--primary-black, #0B0B0B);
+
+font-family: Roboto Condensed;
+font-size: 22px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+text-transform: uppercase;
+}
+.recbas1>h2
+{
+    position: relative;
+    color: var(--primary-black, #0B0B0B);
+font-family: Roboto;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 97px; 
+}
+.recbas1>p 
+{
+    position: absolute;
+    color: #7D7D7D;
+    font-family: Roboto Condensed;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    top: 84px;
+   
+           
+}
+.recbas1>a {
+    color: inherit; 
+    text-decoration: none; 
+}
+.recbas2
+{
+    position: absolute;
+    top: 2096px;
+    left: 1152px;
+}
+.recbas2>h1
+{
+    position: absolute;
+    color: var(--primary-black, #0B0B0B);
+
+font-family: Roboto Condensed;
+font-size: 22px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+text-transform: uppercase;
+}
+.recbas2>h2
+{
+    position: relative;
+    color: var(--primary-black, #0B0B0B);
+font-family: Roboto;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 97px; 
+}
+.recbas2>p 
+{
+    position: absolute;
+    color: #7D7D7D;
+    font-family: Roboto Condensed;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    top: 84px;
+   
+           
+}
+.recbas2>a {
+    color: inherit; 
+    text-decoration: none; 
+}
+.recbas3
+{
+    position: absolute;
+    top: 2579px;
+    left: 706px;
+}
+.recbas3>h1
+{
+    position: absolute;
+    color: var(--primary-black, #0B0B0B);
+
+font-family: Roboto Condensed;
+font-size: 22px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+text-transform: uppercase;
+}
+.recbas3>h2
+{
+    position: relative;
+    color: var(--primary-black, #0B0B0B);
+font-family: Roboto;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 97px; 
+}
+.recbas3>p 
+{
+    position: absolute;
+    color: #7D7D7D;
+    font-family: Roboto Condensed;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    top: 84px;
+   
+           
+}
+.recbas3>a {
+    color: inherit; 
+    text-decoration: none; 
+}
+.recbas4
+{
+    position: absolute;
+    top: 2503px;
+    left: 1153px;
+}
+.recbas4>h1
+{
+    position: relative;
+    color: var(--primary-black, #0B0B0B);
+
+font-family: Roboto Condensed;
+font-size: 22px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+text-transform: uppercase;
+
+}
+.recbas4>h2
+{
+    position: relative;
+    color: var(--primary-black, #0B0B0B);
+font-family: Roboto;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 30px;
+
+}
+.recbas4>p 
+{
+    position: absolute;
+    color: #7D7D7D;
+    font-family: Roboto Condensed;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    top: 84px;
+   
+           
+}
+.recbas4>a {
+    position: absolute;
+    color: inherit;
+    text-decoration: none;
+    bottom: -91px;
+}
+.recbas5
+{
+    position: absolute;
+    top: 3058px;
+    left: 702px;
+}
+.recbas5>h1
+{
+    position: absolute;
+    color: var(--primary-black, #0B0B0B);
+
+font-family: Roboto Condensed;
+font-size: 22px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+text-transform: uppercase;
+}
+.recbas5>h2
+{
+    position: relative;
+    color: var(--primary-black, #0B0B0B);
+font-family: Roboto;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 97px; 
+}
+.recbas5>p 
+{
+    position: absolute;
+    color: #7D7D7D;
+    font-family: Roboto Condensed;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    top: 84px;
+   
+           
+}
+.recbas5>a {
+    color: inherit; 
+    text-decoration: none; 
+}
+.recbas6
+{
+    position: absolute;
+    top: 3058px;
+    left: 1153px;
+}
+.recbas6>h1
+{
+    position: absolute;
+    color: var(--primary-black, #0B0B0B);
+
+font-family: Roboto Condensed;
+font-size: 22px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+text-transform: uppercase;
+}
+.recbas6>h2
+{
+    position: relative;
+    color: var(--primary-black, #0B0B0B);
+font-family: Roboto;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 97px; 
+}
+.recbas6>p 
+{
+    position: absolute;
+    color: #7D7D7D;
+    font-family: Roboto Condensed;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    top: 84px;
+   
+           
+}
+.recbas6>a {
+    color: inherit; 
+    text-decoration: none; 
+}
+.recbas7
+{
+    position: absolute;
+    top: 3550px;
+    left: 702px;
+}
+.recbas7>h1
+{
+    position: absolute;
+    color: var(--primary-black, #0B0B0B);
+
+font-family: Roboto Condensed;
+font-size: 22px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+text-transform: uppercase;
+}
+.recbas7>h2
+{
+    position: relative;
+    color: var(--primary-black, #0B0B0B);
+font-family: Roboto;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 97px; 
+}
+.recbas7>p 
+{
+    position: absolute;
+    color: #7D7D7D;
+    font-family: Roboto Condensed;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    top: 84px;
+   
+           
+}
+.recbas7>a {
+    color: inherit; 
+    text-decoration: none; 
+}
+.recbas8
+{
+    position: absolute;
+    top: 3550px;
+    left: 1153px;
+}
+.recbas8>h1
+{
+    position: absolute;
+    color: var(--primary-black, #0B0B0B);
+
+font-family: Roboto Condensed;
+font-size: 22px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+text-transform: uppercase;
+}
+.recbas8>h2
+{
+    position: relative;
+    color: var(--primary-black, #0B0B0B);
+font-family: Roboto;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 97px; 
+}
+.recbas8>p 
+{
+    position: absolute;
+    color: #7D7D7D;
+    font-family: Roboto Condensed;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    top: 84px;
+   
+           
+}
+.recbas8>a {
+    color: inherit; 
+    text-decoration: none; 
+}
